<resources>
    <string name="app_name">StudentHeartMonitor</string>
    <string name="i_am_a">I am a</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registered! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="date">Date</string>
    <string name="create_lesson">Create Lesson</string>
    <string name="lesson_overview">Lesson Overview</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="sign_in_teacher">Sign in Teacher</string>
    <string name="lesson_code">Lesson Code</string>
    <string name="lesson_name">Lesson Name</string>
    <string name="create_lesson_name">Create Lesson</string>
    <string name="create_lesson_button">Create Lesson</string>
    <string name="details">Details</string>
    <string name="class_name">Class\nIT1F2</string>
    <string name="lesson_name_text">Lesson\nInnovate</string>
    <string name="lesson_code_here">Lesson Code Appear Here</string>
    <string name="home">Home</string>
    <string name="number_of_students">Total Number Of Students:</string>
    <string name="sign_up">Sign Up Teacher</string>

    <string name="title_activity_join_lesson">JoinLesson</string>

    <string name="sign_up_student">Sign Up Student</string>
    <string name="sign_in_student">Sign in Student</string>
    <string name="join_lesson">Join Lesson</string>
    <string name="join_lesson_button">Join Lesson</string>
    <string name="average_bpm_text">Average BPM</string>
    <string name="bpm">BPM</string>
    <string name="devices">Bluetooth Devices</string>
    <string name="student_bpm">BPM</string>
    <string name="student_name">Name Here</string>
    <string name="btnBpm">Push to start measuring</string>

    <!--    <string name="title_activity_login">Sign in</string>-->
    <!--    <string name="prompt_email">Email</string>-->
    <!--    <string name="prompt_password">Password</string>-->
    <!--    <string name="login">Login</string>-->
    <!--    <string name="action_sign_in_short">Sign in</string>-->
    <!--    <string name="welcome">"Welcome !"</string>-->
    <!--    <string name="invalid_username">Not a valid username</string>-->
    <!--    <string name="invalid_password">Password must be >5 characters</string>-->
    <!--    <string name="login_failed">"Login failed"</string>-->
    <!--    <string name="userName">Username</string>-->
    <!--    <string name="username">Username</string>-->
    <!--    <string name="password">Password</string>-->
    <!--    <string name="pass_student">Password</string>-->
    <!--    <string name="login_student">Login</string>-->
</resources>
