<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout_overview"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar_layout"/>

        <TextView
            android:id="@+id/text_view_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="125dp"
            android:paddingBottom="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/date"
            android:textColor="@color/date_color"
            android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="2">


        <TextView
            android:id="@+id/lesson_overview_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="#2F7183"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/lesson_name_text"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn6"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="#2F7183"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/class_name"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>
        <TextView
            android:id="@+id/text_lesson_class"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_marginStart="160dp"
            android:layout_marginBottom="20dp"
            android:background="#2F7183"
            android:text="@string/details"
            android:gravity="center"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/text_view_num_students"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:paddingBottom="15dp"
            android:textSize="18sp"
            android:text="@string/number_of_students"
            android:textColor="@color/date_color" />

        <TextView
            android:id="@+id/student_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:paddingBottom="15dp"
            android:textSize="18sp"
            android:text="@string/student_name"
            android:textColor="@color/date_color" />

        <TextView
            android:id="@+id/student_bpm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:paddingBottom="15dp"
            android:textSize="18sp"
            android:text="@string/student_bpm"
            android:textColor="@color/date_color" />
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navigationView"
        android:layout_gravity="start"
        app:menu="@menu/drawer_lesson_overview_menu"
        app:headerLayout="@layout/header_layout"
        />
</androidx.drawerlayout.widget.DrawerLayout>