<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.TeacherActivity"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical" >
        <include
            layout="@layout/toolbar_layout"/>
        <TextView
            android:id="@+id/text_view_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:text="@string/date"
            android:textAlignment="center"
            android:textColor="@color/date_color"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_lesson_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/lesson_code_here"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/welcome"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:padding="10dp"
            android:textColor="@color/lbl_name"
            android:textSize="24sp" />

        <Button
            android:id="@+id/createLesson"
            android:layout_width="250dp"
            android:layout_height="50sp"
            android:layout_marginBottom="45dp"
            android:background="@color/btn_logut_bg"
            android:text="@string/create_lesson"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/lessonOverview"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginBottom="140dp"
            android:background="@color/btn_logut_bg"
            android:text="@string/lesson_overview"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13sp" />

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navigationView"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu"
        app:headerLayout="@layout/header_layout"
        />
</androidx.drawerlayout.widget.DrawerLayout>